Вообщем учусь работать с библиотекой curl и это первый учебный проект который, я смог собрать при помощи интернета и гайдов на ютубе. 1) Так есть идеи как все сделать но пока нет идей как это написать буду смотреть
Вывод: Я плохо сделал в плане того, что пишу все без class, но думать как их правильно построить мне пока не хочеться т.к все же первый раз работаю с интернетом и XML файлами

--- a/exchangeRate_cbr.vcxproj.filters
+++ b/exchangeRate_cbr.vcxproj.filters
@@ -19,4 +19,15 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Сurrency_Сontainer.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="mistake.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="config_parser.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
