--- a/exchangeRate_cbr.vcxproj
+++ b/exchangeRate_cbr.vcxproj
@@ -129,6 +129,11 @@
   <ItemGroup>
     <ClCompile Include="exchangeRate_cbr.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="config_parser.h" />
+    <ClInclude Include="mistake.h" />
+    <ClInclude Include="Сurrency_Сontainer.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
