Так начал подключать БД к курсу валют, но пока не особо

--- a/exchangeRate_cbr.vcxproj.filters
+++ b/exchangeRate_cbr.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="config_parser.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="DATABASE.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
