так сделаю точку восстановления. Потому что я уже один раз сломал код когда изменял кодировку файлов

--- a/exchangeRate_cbr.vcxproj.filters
+++ b/exchangeRate_cbr.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="DATABASE.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="Write_to_file.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
