--- a/exchangeRate_cbr.vcxproj
+++ b/exchangeRate_cbr.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="config_parser.h" />
     <ClInclude Include="DATABASE.h" />
     <ClInclude Include="mistake.h" />
+    <ClInclude Include="Write_to_file.h" />
     <ClInclude Include="Сurrency_Сontainer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
