--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,8 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up C++
-      uses: actions/setup-cpp@v1
-      with:
-        gcc-version: '11'  #версия компилятора
+    - name: Install g++
+      run: sudo apt-get install g++
 
     - name: Build
       run: |
@@ -25,4 +23,4 @@ jobs:
     - name: Run tests
       run: |
         cd build
-        ./test_executable  # имя исполняемого файла с тестами
+        ./test_executable 
