--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,14 +18,13 @@ jobs:
     - name: Start PostgreSQL service
       run: |
         sudo systemctl start postgresql
+        sleep 5 # Ждем немного, чтобы сервис успел запуститься
 
     - name: Create test database
       run: |
-        sudo su - postgres <<EOF
-          psql -c "CREATE DATABASE mydb;"
-          psql -c "CREATE USER postgres WITH PASSWORD '20ufodop1';"
-          psql -c "GRANT ALL PRIVILEGES ON DATABASE mydb TO postgres;"
-        EOF
+        sudo su - postgres -c "psql -c 'CREATE DATABASE mydb;' || echo 'Database already exists.'"
+        sudo su - postgres -c "psql -c 'DO \$\$ BEGIN IF NOT EXISTS (SELECT 1 FROM pg_roles WHERE rolname = ''postgres'') THEN CREATE USER postgres WITH PASSWORD ''20ufodop1''; END IF; END \$\$;'"
+        sudo su - postgres -c "psql -c 'GRANT ALL PRIVILEGES ON DATABASE mydb TO postgres;'"
 
     - name: Build
       run: |
@@ -38,18 +37,3 @@ jobs:
       run: |
         cd build
         ./ExchangeRateCbr
-        
-    #services:
-    #  postgres:
-    #    image: postgres:17
-    #    env:
-    #      POSTGRES_USER: postgres
-    #      POSTGRES_PASSWORD: 20ufodop1
-    #      POSTGRES_DB: mydb
-    #    ports:
-    #      - 5432:5432
-    #    options: >-
-    #      --health-cmd pg_isready
-    #      --health-interval 10s
-    #      --health-timeout 5s
-    #      --health-retries 5
