--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,17 +10,20 @@ pkg_check_modules(PQXX REQUIRED libpqxx)
 
 # Поиск CURL
 find_package(CURL REQUIRED)
+find_package(Iconv REQUIRED)
 
 # Исходные файлы
 file(GLOB SOURCES "*.cpp")
 
 # Создание исполняемого файла
 add_executable(ExchangeRateCbr ${SOURCES})
+include_directories(${Iconv_INCLUDE_DIRS})
 
 # Подключение библиотек
 target_link_libraries(ExchangeRateCbr PRIVATE 
     CURL::libcurl 
     ${PQXX_LIBRARIES}
+    ${Iconv_LIBRARIES}
 )
 
 # Добавляем пути к заголовкам
