--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y g++ libcurl4-openssl-dev libpqxx-dev pkg-config postgresql locales
+        sudo apt-get install -y g++ libcurl4-openssl-dev libpqxx-dev pkg-config postgresql locales libiconv-dev
         sudo locale-gen en_US.UTF-8  # Generate UTF-8 locale
 
     - name: Configure PostgreSQL
