--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,80 +1,73 @@
-steps:
-- name: Checkout code
-  uses: actions/checkout@v4
+name: C++ CI
 
-- name: Install system dependencies
-  run: |
-    sudo apt-get update
-    sudo apt-get install -y \
-      g++ \
-      cmake \
-      make \
-      pkg-config \
-      libcurl4-openssl-dev \
-      libpqxx-dev \
-      postgresql \
-      locales
+on: [push, pull_request]
 
-- name: Install Qt dependencies
-  run: |
-    sudo apt-get install -y \
-      libgl1-mesa-dev \
-      libxkbcommon-x11-0 \
-      libssl-dev \
-      libvulkan-dev
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    env:
+      LC_ALL: en_US.UTF-8
 
-- name: Install Qt6
-  run: |
-    sudo apt-get install -y \
-      qt6-base-dev \
-      qt6-tools-dev \
-      qt6-declarative-dev
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-- name: Generate locale
-  run: |
-    sudo locale-gen en_US.UTF-8
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          g++ \
+          cmake \
+          make \
+          pkg-config \
+          libcurl4-openssl-dev \
+          libpqxx-dev \
+          postgresql \
+          locales
 
-- name: Configure Postgresql
-  run: |
-    echo "lc_messages = 'en_US.UTF-8'" | sudo tee -a /etc/postgresql/*/main/postgresql.conf
-    echo "lc_monetary = 'en_US.UTF-8'" | sudo tee -a /etc/postgresql/*/main/postgresql.conf
-    echo "lc_numeric = 'en_US.UTF-8'" | sudo tee -a /etc/postgresql/*/main/postgresql.conf
-    echo "lc_time = 'en_US.UTF-8'" | sudo tee -a /etc/postgresql/*/main/postgresql.conf
-    
-    echo "host all all 0.0.0.0/0 trust" | sudo tee -a /etc/postgresql/*/main/pg_hba.conf
-    echo "listen_addresses = '*'" | sudo tee -a /etc/postgresql/*/main/postgresql.conf
-    
-    sudo systemctl restart postgresql
+    - name: Install Qt6
+      run: |
+        sudo apt-get install -y \
+          qt6-base-dev \
+          qt6-base-dev-tools \
+          libqt6core6 \
+          libqt6gui6 \
+          libqt6widgets6
 
-- name: Create and configure database
-  run: |
-    sudo -u postgres psql -c "CREATE DATABASE mydb WITH ENCODING 'UTF8' LC_COLLATE 'en_US.UTF-8' LC_CTYPE 'en_US.UTF-8' TEMPLATE template0;"
-    sudo -u postgres psql -c "CREATE USER service WITH PASSWORD '11111111';"
-    sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE mydb TO service;"
-    sudo -u postgres psql -d mydb -c "GRANT ALL ON SCHEMA public TO service;"
-    sudo -u postgres psql -d mydb -c "ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT ALL ON TABLES TO service;"
+    - name: Generate locale
+      run: |
+        sudo locale-gen en_US.UTF-8
 
-- name: Build
-  run: |
-    rm -rf build
-    mkdir build
-    cd build
-    cmake -DCMAKE_BUILD_TYPE=Release ..
-    make
+    - name: Configure Postgresql
+      run: |
+        sudo pg_ctlcluster 14 main start
+        echo "lc_messages = 'en_US.UTF-8'" | sudo tee -a /etc/postgresql/14/main/postgresql.conf
+        echo "host all all 0.0.0.0/0 trust" | sudo tee -a /etc/postgresql/14/main/pg_hba.conf
+        echo "listen_addresses = '*'" | sudo tee -a /etc/postgresql/14/main/postgresql.conf
+        sudo systemctl restart postgresql
 
-- name: Upload application artifact
-  uses: actions/upload-artifact@v4
-  with:
-    name: ExchangeRateCbr-app
-    path: build/ExchangeRateCbr
-    if-no-files-found: error
+    - name: Create and configure database
+      run: |
+        sudo -u postgres psql -c "CREATE DATABASE mydb WITH ENCODING 'UTF8' LC_COLLATE 'en_US.UTF-8' LC_CTYPE 'en_US.UTF-8' TEMPLATE template0;"
+        sudo -u postgres psql -c "CREATE USER service WITH PASSWORD '11111111';"
+        sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE mydb TO service;"
 
-- name: View database
-  if: always()
-  run: |
-    echo "Database structure:"
-    sudo -u postgres psql -d mydb -c "\d"
-    echo "Table structure (exdc):"
-    sudo -u postgres psql -d mydb -c "\d exdc"
-    echo "Data in exdc table:"
-    sudo -u postgres psql -d mydb -c "SELECT * FROM exdc;"
+    - name: Prepare QCustomPlot
+      run: |
+        cp -v ./lib/qcustomplot/qcustomplot.h ./QT/
+        cp -v ./lib/qcustomplot/qcustomplot.cpp ./QT/
+
+    - name: Build
+      run: |
+        rm -rf build
+        mkdir build
+        cd build
+        cmake -DCMAKE_BUILD_TYPE=Release ..
+        make -j$(nproc)
+
+    - name: Upload application artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: ExchangeRateCbr-app
+        path: build/ExchangeRateCbr
+        if-no-files-found: error
