--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,8 @@ jobs:
           qt6-base-dev-tools \
           libqt6core6 \
           libqt6gui6 \
-          libqt6widgets6
+          libqt6widgets6 \
+          libqt6printsupport6
 
     - name: Generate locale
       run: |
