--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,16 +26,10 @@ jobs:
           postgresql-contrib \
           locales
 
-    - name: Install Qt6
-      run: |
-        sudo apt-get install -y \
-          qt6-base-dev \
-          qt6-base-dev-tools \
-          libqt6core6 \
-          libqt6gui6 \
-          libqt6widgets6 \
-          libqt6printsupport6-dev \
-          qttools6-dev-tools
+    - name: Install Qt and dependencies
+      uses: jurplel/install-qt-action@v2
+      with:
+        version: '6.5.0'  
 
     - name: Generate locale
       run: |
